@@ -22,8 +22,8 @@ QT_BEGIN_MOC_NAMESPACE
 QT_WARNING_PUSH
 QT_WARNING_DISABLE_DEPRECATED
 struct qt_meta_stringdata_KKEditClass_t {
-    QByteArrayData data[22];
-    char stringdata0[279];
+    QByteArrayData data[23];
+    char stringdata0[292];
 };
 #define QT_MOC_LITERAL(idx, ofs, len) \
     Q_STATIC_BYTE_ARRAY_DATA_HEADER_INITIALIZER_WITH_OFFSET(len, \
@@ -53,7 +53,8 @@ QT_MOC_LITERAL(17, 227, 12), // "addToToolBar"
 QT_MOC_LITERAL(18, 240, 10), // "switchPage"
 QT_MOC_LITERAL(19, 251, 5), // "index"
 QT_MOC_LITERAL(20, 257, 8), // "closeTab"
-QT_MOC_LITERAL(21, 266, 12) // "closeAllTabs"
+QT_MOC_LITERAL(21, 266, 12), // "closeAllTabs"
+QT_MOC_LITERAL(22, 279, 12) // "doFindButton"
 
     },
     "KKEditClass\0doTimer\0\0doFileMenuItems\0"
@@ -63,7 +64,8 @@ QT_MOC_LITERAL(21, 266, 12) // "closeAllTabs"
     "doDoubleClickPrefs\0QListWidgetItem*\0"
     "item\0setPreferences\0setBMColour\0"
     "setLineColour\0setFont\0addToToolBar\0"
-    "switchPage\0index\0closeTab\0closeAllTabs"
+    "switchPage\0index\0closeTab\0closeAllTabs\0"
+    "doFindButton"
 };
 #undef QT_MOC_LITERAL
 
@@ -73,7 +75,7 @@ static const uint qt_meta_data_KKEditClass[] = {
        8,       // revision
        0,       // classname
        0,    0, // classinfo
-      17,   14, // methods
+      18,   14, // methods
        0,    0, // properties
        0,    0, // enums/sets
        0,    0, // constructors
@@ -81,23 +83,24 @@ static const uint qt_meta_data_KKEditClass[] = {
        0,       // signalCount
 
  // slots: name, argc, parameters, tag, flags
-       1,    0,   99,    2, 0x0a /* Public */,
-       3,    0,  100,    2, 0x0a /* Public */,
-       4,    0,  101,    2, 0x0a /* Public */,
-       5,    0,  102,    2, 0x0a /* Public */,
-       6,    0,  103,    2, 0x0a /* Public */,
-       7,    0,  104,    2, 0x0a /* Public */,
-       8,    0,  105,    2, 0x0a /* Public */,
-       9,    0,  106,    2, 0x0a /* Public */,
-      10,    1,  107,    2, 0x0a /* Public */,
-      13,    0,  110,    2, 0x0a /* Public */,
-      14,    0,  111,    2, 0x0a /* Public */,
-      15,    0,  112,    2, 0x0a /* Public */,
-      16,    0,  113,    2, 0x0a /* Public */,
-      17,    0,  114,    2, 0x0a /* Public */,
-      18,    1,  115,    2, 0x0a /* Public */,
-      20,    1,  118,    2, 0x0a /* Public */,
-      21,    0,  121,    2, 0x0a /* Public */,
+       1,    0,  104,    2, 0x0a /* Public */,
+       3,    0,  105,    2, 0x0a /* Public */,
+       4,    0,  106,    2, 0x0a /* Public */,
+       5,    0,  107,    2, 0x0a /* Public */,
+       6,    0,  108,    2, 0x0a /* Public */,
+       7,    0,  109,    2, 0x0a /* Public */,
+       8,    0,  110,    2, 0x0a /* Public */,
+       9,    0,  111,    2, 0x0a /* Public */,
+      10,    1,  112,    2, 0x0a /* Public */,
+      13,    0,  115,    2, 0x0a /* Public */,
+      14,    0,  116,    2, 0x0a /* Public */,
+      15,    0,  117,    2, 0x0a /* Public */,
+      16,    0,  118,    2, 0x0a /* Public */,
+      17,    0,  119,    2, 0x0a /* Public */,
+      18,    1,  120,    2, 0x0a /* Public */,
+      20,    1,  123,    2, 0x0a /* Public */,
+      21,    0,  126,    2, 0x0a /* Public */,
+      22,    0,  127,    2, 0x0a /* Public */,
 
  // slots: parameters
     QMetaType::Void,
@@ -116,6 +119,7 @@ static const uint qt_meta_data_KKEditClass[] = {
     QMetaType::Void,
     QMetaType::Void, QMetaType::Int,   19,
     QMetaType::Bool, QMetaType::Int,   19,
+    QMetaType::Void,
     QMetaType::Void,
 
        0        // eod
@@ -145,6 +149,7 @@ void KKEditClass::qt_static_metacall(QObject *_o, QMetaObject::Call _c, int _id,
         case 15: { bool _r = _t->closeTab((*reinterpret_cast< int(*)>(_a[1])));
             if (_a[0]) *reinterpret_cast< bool*>(_a[0]) = std::move(_r); }  break;
         case 16: _t->closeAllTabs(); break;
+        case 17: _t->doFindButton(); break;
         default: ;
         }
     }
@@ -179,13 +184,13 @@ int KKEditClass::qt_metacall(QMetaObject::Call _c, int _id, void **_a)
     if (_id < 0)
         return _id;
     if (_c == QMetaObject::InvokeMetaMethod) {
-        if (_id < 17)
+        if (_id < 18)
             qt_static_metacall(this, _c, _id, _a);
-        _id -= 17;
+        _id -= 18;
     } else if (_c == QMetaObject::RegisterMethodArgumentMetaType) {
-        if (_id < 17)
+        if (_id < 18)
             *reinterpret_cast<int*>(_a[0]) = -1;
-        _id -= 17;
+        _id -= 18;
     }
     return _id;
 }
