@@ -1,4 +1,7 @@
 0.5.0
+Done find/find next/find replace.
+Done saving files and quit.
+Done quit.
 Done revert.
 Done save all.
 Done close tab.
